--- a/3rdparty/lua/CMakeLists.txt
+++ b/3rdparty/lua/CMakeLists.txt
@@ -6,7 +6,7 @@ project(lua VERSION 5.4.7 LANGUAGES C CXX)
 #================================
 option(LUA_BUILD_COMPILER "Build Lua compiler" ON)
 option(LUA_BUILD_INTERPRETER "Build Lua interpreter" ON)
-option(LUA_INSTALL_TARGET "Create install target" OFF)
+option(LUA_INSTALL_TARGET "Create install target" ON)
 
 #================================
 # Directory variables.
@@ -17,13 +17,7 @@ set(LUA_SOURCE_ROOT ${LUA_SOURCE_DIR}/lua-5.4.7/src)
 #================================
 # Add source cmake.
 #================================
-include(lua_source_definition.cmake)
-
-#message(STATUS ${LUA_LIBRARY_SOURCE})
-#message(STATUS ${LUA_LIBRARY_INCLUDE})
-#message(STATUS ${LUA_LIBRARY_PUBLIC_INCLUDE})
-#message(STATUS ${LUA_COMPILER_SOURCE})
-#message(STATUS ${LUA_INTERPRETER_SOURCE})
+include(lua_code_def.cmake)
 
 #================================
 # Packages.
@@ -73,4 +67,67 @@ if (LUA_BUILD_INTERPRETER)
     add_executable(lua ${LUA_INTERPRETER_SOURCE})
     target_link_libraries(lua PRIVATE lua_lib)
     set_target_properties(lua PROPERTIES FOLDER "lua")
+endif()
+
+#================================
+# Lua interpreter
+#================================
+if (LUA_INSTALL_TARGET)
+    install(TARGETS lua_lib
+            EXPORT lua_lib
+            LIBRARY DESTINATION lib
+            ARCHIVE DESTINATION lib
+            RUNTIME DESTINATION lib
+            INCLUDES DESTINATION include
+    )
+
+    include(CMakePackageConfigHelpers)
+    include(GNUInstallDirs)
+    write_basic_package_version_file(
+            "${PROJECT_BINARY_DIR}/luaConfigVersion.cmake"
+            VERSION ${PACKAGE_VERSION}
+            COMPATIBILITY ExactVersion
+    )
+
+    install(EXPORT lua_lib
+            FILE luaTargets.cmake
+            NAMESPACE lua::
+            DESTINATION lib/cmake/lua
+    )
+
+    install(FILES
+            "${CMAKE_CURRENT_SOURCE_DIR}/cmake/luaConfig.cmake"
+            "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Findlua.cmake"
+            "${CMAKE_CURRENT_BINARY_DIR}/luaConfigVersion.cmake"
+            DESTINATION lib/cmake/lua
+    )
+
+    install(FILES
+            ${LUA_LIBRARY_PUBLIC_INCLUDE}
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/lua"
+    )
+
+    if (MSVC)
+        set(PDB_DIR_SUFFIX
+                "$<$<CONFIG:Debug>:Debug>$<$<CONFIG:RelWithDebInfo>:RelWithDebInfo>")
+        set(LIB_SUFFIX "$<$<CONFIG:Debug>:d>")
+
+        set(PDB_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${PDB_DIR_SUFFIX}")
+        set(PDB_NAME "lua_lib${LIB_SUFFIX}.pdb")
+        install(FILES
+                "${PDB_OUTPUT_DIRECTORY}/${PDB_NAME}"
+                DESTINATION lib OPTIONAL)
+    endif()
+
+    if (LUA_BUILD_COMPILER)
+        install(TARGETS luac
+                DESTINATION bin
+        )
+    endif()
+
+    if (LUA_BUILD_INTERPRETER)
+        install(TARGETS lua
+                DESTINATION bin
+        )
+    endif()
 endif()
