--- a/3rdparty/lua/cmake/LuaConfig.cmake.in
+++ b/3rdparty/lua/cmake/LuaConfig.cmake.in
@@ -1,3 +1,5 @@
 @PACKAGE_INIT@
 
 include("${CMAKE_CURRENT_LIST_DIR}/LuaTargets.cmake")
+
+set_and_check(LUA_INCLUDE_DIR "${PACKAGE_PREFIX_DIR}/include")
