--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,21 +5,18 @@ project("xnp" VERSION "1.0.0" LANGUAGES "C" "CXX")
 
 # 设置 C++ 标准
 set(CMAKE_CXX_STANDARD 17)
+
+# 设置库安装路径
 set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}")
-
-# 设置安装目录变量(全局)
-set_property(GLOBAL PROPERTY XXNP_INSTALL_PATH ${CMAKE_INSTALL_PREFIX})
-get_property(XXNP_INSTALL_PATH GLOBAL PROPERTY XXNP_INSTALL_PATH)
-
-# 清空系统默认路径
+# 清空搜索库路径
 set(CMAKE_PREFIX_PATH "")
-# 设置自定义路径作为首选路径
-set(CMAKE_PREFIX_PATH "${XXNP_INSTALL_PATH}")
+# 设置搜索库路径
+set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX}")
 
 # 安装第三方库
 add_subdirectory(3rdparty)
 
 # 核心
-add_subdirectory(core)
+#add_subdirectory(core)
 
-#add_subdirectory(dealer)
+
