--- a/dealer/CMakeLists.txt
+++ b/dealer/CMakeLists.txt
@@ -1,24 +1,16 @@
-# 获得安装目录
-get_property(XXNP_INSTALL_PATH GLOBAL PROPERTY XXNP_INSTALL_PATH)
-
 project(dealer)
 
-# 判断
-if (NOT (EXISTS "${XXNP_INSTALL_PATH}/lib/gcc_x64_lib/libwxbase32ud.a" OR EXISTS "${XXNP_INSTALL_PATH}/lib/gcc_x64_lib/libwxbase32u.a"))
-    message(STATUS "******************** wxWidgets not install ********************")
-    return()
-endif ()
 
-set(wxWidgets_ROOT_DIR "${XXNP_INSTALL_PATH}")
-set(wxWidgets_LIB_DIR "${XXNP_INSTALL_PATH}/lib/gcc_x64_lib")
-find_package(wxWidgets REQUIRED COMPONENTS webview xrc xml html core base)
+# 搜索wxWidgets库
+set(wxWidgets_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib/gcc_x64_lib")
+find_package(wxWidgets REQUIRED COMPONENTS core base)
 
 file(COPY "${PROJECT_SOURCE_DIR}/resources" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 
 set(CODE_SOURCES
         src/main.cpp
-        src/wxSkinXFrame.h
-        src/wxSkinXFrame.cpp
+        src/ui/XnpFrame.h
+        src/ui/XnpFrame.cpp
 )
 
 add_executable(${PROJECT_NAME} WIN32 ${CODE_SOURCES} resources.rc)
