--- a/dealer/CMakeLists.txt
+++ b/dealer/CMakeLists.txt
@@ -30,10 +30,10 @@ set(BACKENDS_SOURCES
 
 set(CODE_SOURCES
         src/main.cpp
-        src/uiw/XnpFrame.h
-        src/uiw/XnpFrame.cpp
-        src/uir/XnpRmlUIContext.h
-        src/uir/XnpRmlUIContext.cpp
+        src/ui/XnpFrame.h
+        src/ui/XnpFrame.cpp
+        src/render/XnpRmlUIContext.h
+        src/render/XnpRmlUIContext.cpp
         src/event/XnpEventHandler.h
         src/event/XnpEventHandler.cpp
 )
@@ -55,7 +55,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
 )
 target_include_directories(${PROJECT_NAME} PUBLIC src)
-target_include_directories(${PROJECT_NAME} PUBLIC src/uir)
-target_include_directories(${PROJECT_NAME} PUBLIC src/uiw)
+target_include_directories(${PROJECT_NAME} PUBLIC src/ui)
+target_include_directories(${PROJECT_NAME} PUBLIC src/render)
 target_include_directories(${PROJECT_NAME} PUBLIC src/shell)
 target_include_directories(${PROJECT_NAME} PUBLIC src/backends)
