--- a/dealer/CMakeLists.txt
+++ b/dealer/CMakeLists.txt
@@ -23,7 +23,7 @@ set(BACKENDS_SOURCES
         src/backends/RmlUi_Renderer_VK.cpp
         src/backends/RmlUi_Include_Vulkan.h
         src/backends/RmlUi_Include_Windows.h
-        src/backends/RmlUi_Backend_Win32_VK.cpp
+#        src/backends/RmlUi_Backend_Win32_VK.cpp
         src/backends/RmlUi_Backend.h
 )
 
