--- a/dealer/CMakeLists.txt
+++ b/dealer/CMakeLists.txt
@@ -1,6 +1,5 @@
 project(dealer)
 
-
 # 搜索wxWidgets库
 set(wxWidgets_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib/gcc_x64_lib")
 find_package(wxWidgets REQUIRED COMPONENTS core base)
@@ -9,46 +8,22 @@ find_package(OpenGL REQUIRED)
 
 file(COPY "${PROJECT_SOURCE_DIR}/resources" DESTINATION "${CMAKE_BINARY_DIR}")
 
-set(SHELL_SOURCES
-        src/shell/Shell.cpp
-        src/shell/Shell.h
-        src/shell/ShellFileInterface.cpp
-        src/shell/ShellFileInterface.h
-)
 
-set(BACKENDS_SOURCES
-        src/backends/RmlUi_Platform_Win32.h
-        src/backends/RmlUi_Platform_Win32.cpp
-        src/backends/RmlUi_Renderer_VK.h
-        src/backends/RmlUi_Renderer_VK.cpp
-        src/backends/RmlUi_Include_Vulkan.h
-        src/backends/RmlUi_Include_Windows.h
-#        src/backends/RmlUi_Backend_Win32_VK.cpp
-        src/backends/RmlUi_Backend.h
-)
 
 set(CODE_SOURCES
         src/main.cpp
         src/ui/XnpFrame.h
         src/ui/XnpFrame.cpp
-        src/renderer/XnpWin32VKContext.h
-        src/renderer/XnpWin32VKContext.cpp
-        src/event/XnpEventHandler.h
-        src/event/XnpEventHandler.cpp
+
 )
 
 add_executable(${PROJECT_NAME} WIN32
-        ${SHELL_SOURCES}
-        ${BACKENDS_SOURCES}
         ${CODE_SOURCES}
         resources.rc)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${wxWidgets_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PRIVATE
-        ${wxWidgets_LIBRARIES}
-        RmlUi::RmlUi
-        OpenGL::GL
-        imm32
+        xnp-core
         -static
 )
 
@@ -57,7 +32,3 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 )
 target_include_directories(${PROJECT_NAME} PUBLIC src)
 target_include_directories(${PROJECT_NAME} PUBLIC src/ui)
-target_include_directories(${PROJECT_NAME} PUBLIC src/renderer)
-target_include_directories(${PROJECT_NAME} PUBLIC src/shell)
-target_include_directories(${PROJECT_NAME} PUBLIC src/backends)
-target_include_directories(${PROJECT_NAME} PUBLIC src/event)
