--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,9 @@ set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX}")
 
 # 安装第三方库
 add_subdirectory(3rdparty)
-
-
+# core
+add_subdirectory(core)
+# dealer
 add_subdirectory(dealer)
 
 
