--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,11 @@ set(CMAKE_PREFIX_PATH "")
 set(CMAKE_PREFIX_PATH "${CMAKE_INSTALL_PREFIX}")
 
 # 安装第三方库
-add_subdirectory(3rdparty)
-# core
-add_subdirectory(core)
-# dealer
-add_subdirectory(dealer)
-
-
-#add_subdirectory(test)
+#add_subdirectory(3rdparty)
+## core
+#add_subdirectory(core)
+## dealer
+#add_subdirectory(dealer)
+# qt
+add_subdirectory(txh_dealer)
 
